Edited wiki page ICMRPaper through web user interface.

--- a/wiki/ICMRPaper.wiki
+++ b/wiki/ICMRPaper.wiki
@@ -5,7 +5,7 @@
 
 The dataset used in the paper is available in the Downloads section of this site. The procedure is described in more detail on the [Dataset] page. As part of the source package also available on this site, we include two programs meant to benchmark the performance of the `StripeCode` algorithm relative to the CO-1 algorithm and a random ranking baseline. These programs may be found in the `util` source directory, and projects for the free [http://www.codeblocks.org/ Code::Blocks development environment] may be found in the `projects` directory.
 
-We provide pre-processed image feature files for our dataset, also available in the downloads section. These files may be used directly with the `Benchmarker` program to measure retrieval performance. *The files may be found in the [http://code.google.com/p/stripespotter/source/browse/trunk icmr branch of the repository].
+We provide pre-processed image feature files for our dataset, also available in the downloads section. These files may be used directly with the `Benchmarker` program to measure retrieval performance. 
 
   * StripeCodes.txt
   * MRHistograms.txt
@@ -15,3 +15,19 @@ The full set of command line options for the Benchmarker program can be obtained
 We also provide four scripts for the free [http://www.r-project.org/ R statistical package] that generates the plots in our ACM ICMR paper from the output of the `Benchmarker` program. 
 
 == Running benchmarks ==
+
+The data files used to generate the figures in the ACM ICMR paper may be found in the [http://code.google.com/p/stripespotter/source/browse/trunk icmr branch of the repository]. The following command sequence will generate figures similar to ones in the paper:
+
+{{{
+Benchmarker  --input StripeCodes.txt  --ipa 1 --method stripecode  --trials 5000 > result-StripeCodes.txt
+Benchmarker  --input StripeCodes.txt  --ipa 1 --method random  --trials 50000 > result-random.txt
+Benchmarker  --input MRHistograms.txt  --ipa 1 --method mrhisto  --trials 50000 > result-MRHistograms.txt
+}}}
+
+The three commands above run a series of randomized retrieval experiments (using a time-based numeric seed), storing the correct ranks of the query animal in the `result-XXX` files. These files can be analyzed using the `plot-MRR.R` and `plot-MeanRank.R` R scripts in the same directory.
+
+{{{
+R --no-save -f plot-MRR.R
+}}}
+
+An image file called `fig-MRR.eps` can now be found in the same directory.
